--- a/partials/content-nl.html
+++ b/partials/content-nl.html
@@ -88,7 +88,7 @@
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Projectie op de grond die
                     reageert
                     op beweging. Perfect voor scholen en speelhallen.</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Vloer."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn" style="width: 100%; text-align: center; border-radius: 999px;">Meer
                     info</a>
             </div>
@@ -106,7 +106,7 @@
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Wandprojectie voor sport,
                     educatie
                     en entertainment. Speel, leer en beweeg!</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Muur."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn btn-danger"
                     style="width: 100%; text-align: center; border-radius: 999px;">Meer info</a>
             </div>
@@ -122,7 +122,7 @@
                 <h3 class="pricing-title" style="text-align: center;">Interactieve Zandbak</h3>
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Augmented reality zandbak met
                     topografische projecties. Leren door spelen.</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Zandbak."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn" style="width: 100%; text-align: center; border-radius: 999px;">Meer
                     info</a>
             </div>
@@ -139,7 +139,7 @@
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Klimmen wordt een game!
                     Projectie
                     op klimwanden voor extra uitdaging.</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20informatie%20over%20de%20Interactieve%20Klimwand."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn" style="width: 100%; text-align: center; border-radius: 999px;">Meer
                     info</a>
             </div>
@@ -155,7 +155,7 @@
                 <h3 class="pricing-title" style="text-align: center;">Mobiele Vloer</h3>
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Verhuur voor evenementen. Wij
                     verzorgen transport en installatie.</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20de%20Mobiele%20Vloer%20huren."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn" style="width: 100%; text-align: center; border-radius: 999px;">Offerte
                     aanvragen</a>
             </div>
@@ -172,7 +172,7 @@
                 <p style="text-align: center; color: #666; margin-bottom: 2rem;">Bouw uw eigen interactieve
                     spellen
                     met onze Game Editor en Animator tools.</p>
-                <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20weten%20over%20maatwerk%20software."
+                <a href="mailto:info@interactivemove.nl"
                     target="_blank" class="btn" style="width: 100%; text-align: center; border-radius: 999px;">Meer
                     info</a>
             </div>
