--- a/partials/prijzen-nl.html
+++ b/partials/prijzen-nl.html
@@ -86,7 +86,7 @@
                 </p>
                 <div class="hero-cta-group">
                     <a href="#vergelijk" class="btn btn-primary">Vergelijk Pakketten</a>
-                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20vrijblijvende%20offerte." target="_blank" class="btn btn-secondary">Direct Advies</a>
+                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-secondary">Direct Advies</a>
                 </div>
             </div>
         </section>
@@ -158,7 +158,7 @@
                                 <td data-label="Spellen">60+ spellen</td>
                                 <td data-label="Ideaal Voor">Scholen, Speelhallen</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Vloer." target="_blank" class="btn btn-small">Offerte</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-small">Offerte</a>
                                 </td>
                             </tr>
                             <tr class="popular-row">
@@ -176,7 +176,7 @@
                                 <td data-label="Spellen">60+ spellen</td>
                                 <td data-label="Ideaal Voor">Wachtkamers, Zorg</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Muur." target="_blank" class="btn btn-danger btn-small">Offerte</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-danger btn-small">Offerte</a>
                                 </td>
                             </tr>
                             <tr>
@@ -193,7 +193,7 @@
                                 <td data-label="Spellen">AR Landschappen</td>
                                 <td data-label="Ideaal Voor">Musea, Educatie</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Zandbak." target="_blank" class="btn btn-small">Offerte</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-small">Offerte</a>
                                 </td>
                             </tr>
                             <tr>
@@ -210,7 +210,7 @@
                                 <td data-label="Spellen">Klim Games</td>
                                 <td data-label="Ideaal Voor">Speelhallen, Sport</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20de%20Interactieve%20Klimwand." target="_blank" class="btn btn-small">Offerte</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-small">Offerte</a>
                                 </td>
                             </tr>
                             <tr>
@@ -227,7 +227,7 @@
                                 <td data-label="Spellen">60+ spellen</td>
                                 <td data-label="Ideaal Voor">Evenementen, Beurzen</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20de%20Mobiele%20Vloer%20huren%20voor%20een%20evenement." target="_blank" class="btn btn-small">Offerte</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-small">Offerte</a>
                                 </td>
                             </tr>
                             <tr>
@@ -244,7 +244,7 @@
                                 <td data-label="Spellen">Eigen spellen</td>
                                 <td data-label="Ideaal Voor">Branding, Corporate</td>
                                 <td>
-                                    <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20weten%20over%20maatwerk%20software." target="_blank" class="btn btn-small">Bespreek</a>
+                                    <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-small">Bespreek</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -301,7 +301,7 @@
                             </ul>
                         </div>
                         <div class="package-footer">
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20weten%20over%20het%20Essential%20pakket." target="_blank" class="btn btn-secondary" style="width: 100%;">Meer Informatie</a>
+                            <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-secondary" style="width: 100%;">Meer Informatie</a>
                         </div>
                     </div>
 
@@ -345,7 +345,7 @@
                             </ul>
                         </div>
                         <div class="package-footer">
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte%20voor%20het%20Professional%20pakket." target="_blank" class="btn btn-primary" style="width: 100%;">Offerte Aanvragen</a>
+                            <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-primary" style="width: 100%;">Offerte Aanvragen</a>
                         </div>
                     </div>
 
@@ -388,7 +388,7 @@
                             </ul>
                         </div>
                         <div class="package-footer">
-                            <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20meer%20weten%20over%20het%20Enterprise%20pakket." target="_blank" class="btn btn-secondary" style="width: 100%;">Neem Contact Op</a>
+                            <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-secondary" style="width: 100%;">Neem Contact Op</a>
                         </div>
                     </div>
                 </div>
@@ -579,7 +579,7 @@
                         Neem contact op voor een offerte op maat. Wij denken graag met u mee over de beste oplossing voor uw situatie en budget.
                     </p>
                     <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                        <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20vrijblijvende%20offerte%20ontvangen." target="_blank" class="btn btn-large" style="background: #000; color: #fff;">
+                        <a href="mailto:info@interactivemove.nl" target="_blank" class="btn btn-large" style="background: #000; color: #fff;">
                             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24" style="margin-right: 0.5rem;">
                                 <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
                             </svg>
@@ -602,7 +602,7 @@
 
     <!-- Mobile Sticky CTA -->
     <div class="mobile-sticky-cta">
-        <a href="https://wa.me/31623998934?text=Hallo%2C%20ik%20wil%20graag%20een%20offerte." target="_blank" class="mobile-cta-btn">
+        <a href="mailto:info@interactivemove.nl" target="_blank" class="mobile-cta-btn">
             <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
             </svg>
@@ -617,16 +617,16 @@
                 <img src="media/logo-final.png" alt="InterActiveMove" class="footer-logo" loading="lazy">
                 <p class="footer-tagline">Beweeg, Leer en Speel met InterActiveMove</p>
                 <div class="footer-social">
-                    <a href="#" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.facebook.com/interactivemove" target="_blank" aria-label="Facebook"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z" />
                         </svg></a>
-                    <a href="#" aria-label="Twitter"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.instagram.com/interactivemove" target="_blank" aria-label="Instagram"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z" />
                         </svg></a>
-                    <a href="#" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
+                    <a href="https://www.youtube.com/@interactivemove" target="_blank" aria-label="YouTube"><svg width="24" height="24" fill="currentColor"
                             viewBox="0 0 24 24">
                             <path
                                 d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2 29 29 0 00.46-5.25 29 29 0 00-.46-5.33z" />
